fieldx/tests/uncompilable/beta/incompat_field_args.stderr
error: The following options from group 'field mode' cannot be used together: `lazy`, `optional`
 --> tests/uncompilable/incompat_field_args.rs
  |
  |     #[fieldx(lazy, optional)]
  |     ^
